--- a/app/src/main/res/layout/list_activity.xml
+++ b/app/src/main/res/layout/list_activity.xml
@@ -19,6 +19,7 @@
         tools:listitem="@layout/item_address_1" />
 
     <TextView
+        android:visibility="gone"
         android:id="@+id/textViewEmpty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -29,8 +30,7 @@
         android:textColor="@color/red1"
         android:textSize="@dimen/textSizeLarge"
         android:textStyle="bold"
-        android:visibility="gone"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="562dp"
-        tools:layout_editor_absoluteY="379dp" />
+        tools:ignore="MissingConstraints" />
+    <!--    tools:layout_editor_absoluteX="562dp"-->
+    <!--    tools:layout_editor_absoluteY="379dp"-->
 </androidx.constraintlayout.widget.ConstraintLayout>
