--- a/app/src/main/res/menu/document_menu.xml
+++ b/app/src/main/res/menu/document_menu.xml
@@ -13,4 +13,11 @@
         android:orderInCategory="200"
         android:title="@string/neighbour_document"
         app:showAsAction="never" />
+
+
+    <item
+        android:id="@+id/menu_other_document"
+        android:orderInCategory="200"
+        android:title="@string/other_document"
+        app:showAsAction="never" />
 </menu>
