New Version gradle

--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -124,13 +124,25 @@
                     tools:ignore="ContentDescription" />
             </LinearLayout>
 
+            <CheckBox
+                android:id="@+id/check_box_save"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/activity_mid_margin"
+                android:layout_marginRight="@dimen/_20sdp"
+                android:layout_marginBottom="@dimen/activity_mid_margin"
+                android:text="@string/save"
+                android:textSize="@dimen/textSizeMedium"
+                android:textStyle="bold" />
+
             <Button
                 android:id="@+id/buttonLogin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_30sdp"
+                android:layout_marginLeft="@dimen/_20sdp"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginRight="@dimen/_30sdp"
+                android:layout_marginRight="@dimen/_20sdp"
                 android:background="@drawable/border_blue_1"
                 android:text="@string/login"
                 android:textColor="@color/text_color1"
