--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -149,6 +149,19 @@
                 android:textSize="@dimen/textSizeLarge"
                 android:textStyle="bold" />
 
+            <Button
+                android:id="@+id/buttonLoginLocal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginRight="@dimen/_20sdp"
+                android:background="@drawable/border_green_2"
+                android:text="@string/login_lcoal"
+                android:textColor="@color/text_color1"
+                android:textSize="@dimen/textSizeLarge"
+                android:textStyle="bold" />
+
             <ImageView
                 android:id="@+id/imageViewLogo"
                 android:layout_width="match_parent"
