--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -5,6 +5,7 @@
         <domain includeSubdomains="true">172.18.12.242</domain>
         <domain includeSubdomains="true">172.18.12.121</domain>
         <domain includeSubdomains="true">172.18.12.14</domain>
+        <domain includeSubdomains="true">https://37.191.92.157</domain>
         <domain includeSubdomains="true">192.168.142.206</domain>
         <domain includeSubdomains="true">https://www.abfaesfahan.ir</domain>
         <domain includeSubdomains="true">https://webservice.aspsms.com</domain>
