--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -125,6 +125,7 @@
             </LinearLayout>
 
             <CheckBox
+                android:checked="true"
                 android:id="@+id/check_box_save"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
