--- a/app/src/main/res/layout/create_image_activity.xml
+++ b/app/src/main/res/layout/create_image_activity.xml
@@ -112,7 +112,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_margin="@dimen/activity_mid_padding"
+        android:layout_marginStart="@dimen/activity_mid_padding"
+        android:layout_marginTop="@dimen/activity_mid_padding"
+        android:layout_marginEnd="@dimen/activity_mid_padding"
+        android:layout_marginBottom="@dimen/activity_mid_padding"
         android:background="@drawable/border_green_2"
         android:paddingLeft="@dimen/activity_medium_padding"
         android:paddingRight="@dimen/activity_medium_padding"
